--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,13 @@
-#footer {
-grid-column-start: 1;
-grid-column-end: -1;
-grid-row-start: 4;
-grid-row-end: 5;
-height:100%;
+#footer{
+    padding:0;
+    position:absolute;
+   bottom:0;
+   width:100%;
+   height:auto;   /* Height of the footer */
+   background:#6cf;
+}
+#footer p{
+    padding:0;
+    margin:0;
+    text-align: center;
 }
