--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,13 @@
 #header {
-background-color: black;
-color: white;
-text-align: center;
-grid-column-start: 1;
-grid-column-end: -1;
-grid-row-start: 1;
-grid-row-end: 2;
-height: 100%;
+    background-color: #111;
+    display: flex;
+    flex-direction: column;
+}
+
+
+#header h1 {
+    text-align: center;
+    color: #eee;
+    display:inline-block;
+    margin:0.5em auto;
 }
