--- a/src/components/results/results.css
+++ b/src/components/results/results.css
@@ -1,7 +1,5 @@
 #results{
-grid-column-start: 1;
-grid-column-end: -1;
-grid-row-start: 3;
-grid-row-end: 4;
-height: 100%;
+    height: 100%;
+    align-self: center;
+    margin-top: 10px;
 }
